--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -136,7 +136,7 @@ a img
   margin: 0; 
 }
 
-#editorloadingbox { padding-top: 100px; padding-bottom: 100px; font-size: 2.5em;  color: #aaa;
+#editorloadingbox { margin-top: 100px; margin-bottom: 100px; font-size: 2.5em;  color: #aaa;
    text-align: center; position: absolute; width: 100%; height: 30px; z-index: 100; }
 
 #editorcontainerbox{
